# api-cliver

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION.md  README.md  RUNNING.md  SECURITY_ANALYSIS.md  SECURITY_ROADMAP.md  fly.toml  pyproject.toml
app/: constants.py  main.py  models.py  openrouter.py
app/tools/: definitions.yaml  registry.py
app/tools/implementations/: epmc.py  orcid.py  screening_list.py  web_search.py
docs/: HALLUCINATION_DETECTION.md  prompt-injection.md  security-overview.md
prompts/: extraction_determinations.txt  extraction_evidence.txt  extraction_work.txt  summary.txt  verification.txt  work.txt
tests/: conftest.py  test_async_jobs.py  test_auth.py  test_input_validation.py  test_llm_cost_optimisations.py  test_rate_limiting.py  test_verify_endpoint.py
tests/fixtures/: openrouter_responses.json  tool_responses.json
